# LeafcutterITI

./: LICENSE  LeafcutterITI_map_gen.py  README.md  leafcutterITI_clustering.py  pyproject.toml  requirements.yml  setup.py
extra_scripts/: ccp_gen.py
extract_scripts/: unify_definition.py
leafcutterITI/: __main__.py  calcutta_functions.py  shared_functions.py
leafcutterITI.egg-info/: PKG-INFO  SOURCES.txt
leafcutterITI/ccg/: ccp_gen.py
leafcutterITI/clustering/: leafcutterITI_clustering.py
leafcutterITI/map_gen/: leafcutterITI_map_gen.py
leafcutterITI/scITI/: calcultta_functions.py  calcutta_functions.py  leafcutterITI_scITI.py  scITI.py
tealeaf/: __main__.py  shared_functions.py  utils.py
tealeaf/clustering/: tealeaf_clustering.py
tealeaf/ggsashimi/: tealeaf_ggsashimi.py
tealeaf/map_gen/: tealeaf_map_gen.py
tealeaf/sc/: sc_utils.py  tealeaf_sc.py
unused/: setup.py
